chrome/test/data/nacl/bad/ppapi_bad_manifest_uses_nexes.nmf
{
  "nexes": {
    "x86-32": "doesnotexist.nexe",
    "x86-64": "doesnotexist.nexe",
    "arm": "doesnotexist.nexe",
    "mips32": "doesnotexist.nexe"
  }
}
